IL-104 fix: fix tests in package Cart, add CartDtoTestStub (renamed from CartDtoTestUtil)